--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 </head>
 
 <body>
+  
   <header>
-    <nav>
-      <figure>
+    
+      
 <img src="img/logo.png" alt=""> 
-<figcaption>Delicious</figcaption>
+<caption>Delicious</caption>
 <p>THE BEST FOOD BLOG ON THE WEB</p>
-</figure>
-<span>
+<nav>
+
 <img src="img/fb-icon.png" alt="facebook icon">
 <img src="img/twit-icon.png" alt="twitter icon">
 <img src="img/gp-icon.png" alt="google plus icon">
@@ -23,7 +24,7 @@
 <img src="img/pint-icon.png" alt="pintrest icon">
 <img src="img/rss-icon.png" alt="rss icon">
 <img src="img/mail-icon.png" alt="email icon">
-</span>
+
     </nav>
   </header>
   
@@ -41,10 +42,8 @@
   <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
   <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
   <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, ie.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
-</main>
-<!-- <figure> -->
-  <!-- <img src="img/list-icon.png" alt"listbackground"> -->
-<!-- <figcaption> -->
+
+
   <div>
   <ul>
     <li>1 1/2 cups milk</li>
@@ -53,7 +52,8 @@
     <li>1lb Black Mission Figs</li>
     <li>1/2 cup brown sugar</li>
     <li>2-4 tbsp water</li>
-  
+  </ul>
+  <ul>
       <li>1 1/2 cups heavy cream</li>
       <li>1/3 granulated sugar</li>
       <li>2 egg yolks</li>
@@ -61,17 +61,15 @@
       <li>tbsp butter</li>
       <li>1 cup honey roasted pecans, roughly chopped</li>
     </ul>
-  <!-- </figcaption>
-  </figure> -->
 </div>
+</main>
   <div>
     <img src="img/small-logo.png" alt"small logo">
     <h2>Vanessa Stevenson</h2>
     <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
-    <button>Share Recipe</button>
+    <button>SHARE RECIPE</button>
   </div>
 <footer>
- <!-- <img src=> -->
  <p>Delicious © 2018 * All Rights Reserved.</p>
  <p>Proudly published by Rebecca</p>
   </footer>
