still trying to put things in place

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 
 <body>
-  
+    <figure><img src="img/logo.png" alt=""></figure>
+    <figcaption>Delicious</figcaption>
+    <p>THE BEST FOOD BLOG ON THE WEB</p> 
   <header>
-    
-      
-<img src="img/logo.png" alt=""> 
-<caption>Delicious</caption>
-<p>THE BEST FOOD BLOG ON THE WEB</p>
+  
+
 <nav>
 
 <img src="img/fb-icon.png" alt="facebook icon">
@@ -31,8 +30,10 @@
   <div>
     <h1>Chocolate Pizza</h1>
     <h4>POSTED ON 15 DEC 2013/DESSERTS</h4>
-    <img src="img/print-icon.png" alt="print icon">
+    <span>
+      <img src="img/print-icon.png" alt="print icon">
     <caption>Print</caption>
+  </span>
   </div>
 
 
@@ -64,14 +65,15 @@
 </div>
 </main>
   <div>
-    <img src="img/small-logo.png" alt"small logo">
     <h2>Vanessa Stevenson</h2>
+    <img src="img/van-pic.png" alt"Author Picture">
     <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
     <button>SHARE RECIPE</button>
   </div>
 <footer>
+    <img src="img/small-logo.png" alt"small logo">
  <p>Delicious © 2018 * All Rights Reserved.</p>
- <p>Proudly published by Rebecca</p>
+ <p>Proudly published with Ghost</p>
   </footer>
 </body>
 </html>
